# lager

./: .gitignore  Doxyfile  LICENSE  README.md  buildall  dependencies.txt  packages.txt
calibrator/: Makefile  lager_calibrator.cc
common/: coordinates_letter.h  coordinates_letter.hpp  letter_coordinates.h  letter_coordinates.hpp  math_utilities.h  spherical_coordinates.h  string_tokenizer.h
docs/: README_8md.html  annotated.html  classDetectedGestureMessage-members.html  classDetectedGestureMessage.html  classGestureSubscriptionMessage-members.html  classGestureSubscriptionMessage.html  classLagerConverter-members.html  classLagerConverter.html  classLagerRecognizer-members.html  classLagerRecognizer.html  classes.html  controls_8cc.html  controls_8cc__incl.map  controls_8cc__incl.md5  controls_8h.html  controls_8h__dep__incl.map  controls_8h__dep__incl.md5  controls_8h_source.html  coordinates__letter_8h.html  coordinates__letter_8h__dep__incl.map  coordinates__letter_8h__dep__incl.md5  coordinates__letter_8h__incl.map  coordinates__letter_8h__incl.md5  coordinates__letter_8h_source.html  dir_000001_000004.html  dir_000002_000003.html  dir_000004_000000.html  dir_000005_000000.html  dir_000005_000003.html  dir_000006_000003.html  dir_000006_000004.html  dir_000006_000005.html  dir_000009_000000.html  dir_000009_000008.html  dir_1c1630eaace7758f38c01fd8ae719f7e.html  dir_1c1630eaace7758f38c01fd8ae719f7e_dep.map  dir_1c1630eaace7758f38c01fd8ae719f7e_dep.md5  dir_2973ab2e726a0f22a175d985ab200e6c.html  dir_2973ab2e726a0f22a175d985ab200e6c_dep.map  dir_2973ab2e726a0f22a175d985ab200e6c_dep.md5  (+118 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  (+29 more)
gesture_manager/: Makefile  lager_gesture_manager.cc
injector/: Makefile  lager_injector.cc
lager_generator/: lager_generator.py
lager_ml/: lager_expander.py  lager_file_to_numbers.py  lager_ml_common.py  lager_ml_utils.py  lager_training_prep.py  lager_training_prep_batch.py  ml_recognizer.py  ml_trainer.py
liblager_connect/: Makefile  liblager_connect.cc  liblager_connect.h
liblager_convert/: .cproject  .project  Makefile  liblager_convert.cc  liblager_convert.h
liblager_recognize/: .gitignore  Makefile  liblager_recognize.cc  liblager_recognize.h
ml/: .gitignore  lager_file_to_numbers.py  lager_training_prep.py  lager_training_prep_batch.py  ml_recognizer.py  ml_trainer.py
recognizer/: .gitignore  Makefile  gestures.dat_old  lager_recognizer.cc  recognizer.cc  recognizer.cpp
viewer/: CMakeLists.txt
viewer/common/: controls.cc  controls.cpp  controls.h  texture.cc
viewer/src/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  gesture.dat_new  gesture.dat_old  lager_viewer.cc  viewer.cc  viewer.cpp
(+2 files in other folders)
